# LEI

./: .gitattributes  .gitignore  README.md
1ano/1S/IPRP/: 1.15_pratica.py  1.17_pratica.py  2.10.py  2.11.py  2.13.py  2.17.py  2.3.py  2.4.py  2.9.py  3.16.py  3.20.py  3.7.py  4.13.py  4.14.py  4.15.py  4.2.py  5.10.py  5.16.py  5.18.py  5.5.py  5.7.py  AJIBCFIAB.py  binário.py  desenhos_aleatórios.py  desktop.ini  estranho.py  exame2015_ex1.py  exame2015_ex2.py  exame2015_ex4.py  foosball_aluno_1.py  onscreenclick_teste.py  pyserial-miniterm-script.py  pyserial-ports-script.py  rascunhos.py  replay_golojv0ja0.txt  replay_golojv1ja0.txt  replay_golojv1ja1.txt  replay_golojv1ja2.txt  replay_golojv1ja3.txt  replay_golojv2ja3.txt  (+5 more)
1ano/2S/ppp/: projetoPPP.rar
1ano/2S/ppp/problemas/output/: 1.1.c  10.1.1  10.1.1.c  10.1.1.ilk  10.1.2.c  10.1.2_new  10.1.2_new.c  13.1.2.c  14.1.1.c  3.1.1.c  3.1.2.c  3.1.3.c  4.2.2.c  4.2.4.c  4.2.6.c  5.1.3.c  5.1.8.c  5.2.2.c  5.2.4.c  6.1.5.c  6.2.1.c  7.1.1.c  7.2.1.c  7.2.2.c  CMakeLists.txt  ListaPessoas.h  codeforces_1.c  estruturas1.h  estruturas2.h  ex  exes_felix.c  ficheiros.c  filas.c  funcoes1.c  funcoes1.h  listas  listas.c  misc1.c  novo1.c  novo2.c  (+8 more)
2ano/1S/POO/: pautaNormal.txt
2ano/1S/TI2/: RelatórioTP1.docx
2ano/2S/AED/: AED PRJ1 Template.docx  BinTreeEx.cpp  PRJ2 2025 Template v1.0.docx
2ano/2S/BD/: BD_Draft6.json  Conceptual Diagram.json  Draft_bd2.json  Generated DDL.txt  Physical Diagram.json  Relatorio_BD_Matheus_Teo.odt  bd_Draft5.json  bd_draft4.json
2ano/2S/RC/: Ficha01Res_2024-2025.odg  PL2.gns3
(+548 files in other folders)
